<resources>
    <string name="app_name">Mais Saúde</string>
    <string name="thumbnail_image_description">thumbnail_image</string>
    <string name="ic_notification_description">ic_notification</string>
    <string name="ic_delete_red"> Deletar Remedio </string>
    <string name="txtTitulo">AGENDAR NOVO REMÉDIO</string>
    <string name="btcontinua_modum">Continuar</string>
    <string name="form_btCancelar"><u>Cancelar</u></string>
    <string name="periodo">Selecionar periodo</string>
    <string-array name="frequencia"> 
        <item>Ano</item>
        <item>Mês</item>
        <item>Semana</item>
        <item>Dia</item>
        <item>Horas</item>
        <item>Minutos</item>
    </string-array>
    <string name="form_lblNome">Nome:</string>
    <string name="form_lblQtd">Quantidade:</string>
    <string name="form_lblFreq">Frequência:</string>
    <string name="txtQuantidade">Quantidade</string>
    <string name="txtNomeRemedio">Remédio</string>
    <string name="txtData">Data: </string>
    <string name="txtCpf">CPF/CNPJ: </string>
    <string name="txtRp">RP(N° de Registro Profissional): </string>
    <string name="txtInstituicao">Instituição: </string>
    <string name="txtNomeFarmaceutico">Nome do Farmaceutico: </string>
    <string name="txtOrientacaoExtra"> Orientação Extra: </string>
    <string name="txtEndereco"> Endereço: </string>
    <string name="txtConcentracao"> Concentração:</string>
    <string name="txtFormaFarmaceutica"> Forma Farmaceutica: </string>
    <string name="lblMeuCalendario"> Meu Calendário </string>
    <string name="lblListaRemedio"> Lista de Remédios </string>
    <string name="lblToolbar"> Bem vindo ao Mais Saúde </string>
    <string name="material_calendar_monday">Seg</string>
    <string name="material_calendar_tuesday">Ter</string>
    <string name="material_calendar_wednesday">Quar</string>
    <string name="material_calendar_thursday">Qui</string>
    <string name="material_calendar_friday">Sex</string>
    <string name="material_calendar_saturday">Sáb</string>
    <string name="material_calendar_sunday">Dom</string>
    <string name="material_calendar_today_button">Hoje</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancelar</string>
    <string name="txtTítuloInfo">Receita médica digital</string>
    <string name="txtSubtituloMedico">Informações do Farmaceutico</string>
    <string name="v_lblNomeFarmaceutico">Nome:</string>
    <string name="v_lblInstituicao">Instituição:</string>
    <string name="v_lblEndereco"> Endereço: </string>
    <string name="v_lblRp">RP (N° de Registro Profissional):</string>
    <string name="v_lblData">Data de solicitação:</string>
    <string name="txtsubRemedio">Informações do Remédio</string>
    <string name="v_lblNomeRemedio">Nome:</string>
    <string name="v_lblConcentracao">Concentração: </string>
    <string name="v_lblFormaFarmaceutica">Forma farmaceutica: </string>
    <string name="v_lblQuantidade">Quantidade:</string>
    <string name="v_lblFrequencia">Frequência:</string>
    <string name="v_lblOrientacaoExtra">Orientações Extras:</string>
    <string name="no_remider_text"> Clique nos botões abaixos para configurar seu alarme!</string>
    <string name="btconcluirAlarme">CONCLUIR</string>
    <string name="title">Title</string>
    <string name="repeat_no_and_type">Repeat No and Type</string>
    <string name="date_and_time">Date and Time</string>
    <string name="details_text">Detalhes</string>
    <string name="dateInicio_text">Data de Inicio</string>
    <string name="time_text">Horário</string>
    <string name="dateFinal_text">Último dia</string>
    <string name="repeat_text">Repetir?</string>
    <string name="Switch_textOff">Desligado</string>
    <string name="repeat_no_text">Intervalo de Repetição</string>
    <string name="repeat_type">Tipo de repetição</string>
    <string name="unsaved_changes_dialog_msg">Descartar mudanças e sair da edição?</string>
    <string name="discard">Descartar</string>
    <string name="keep_editing">Continuar Editando</string>
    <string name="delete_dialog_msg">Apagar este alarm?</string>
    <string name="delete">Apagar</string>
    <string name="cancel">Cancelar</string>
    <string name="editor_delete_reminder_successful">Alarme deletado com sucesso</string>
    <string name="editor_delete_reminder_failed">Erro ao deletar alarme</string>
    <string name="editor_insert_reminder_successful">Alarme salvo com sucesso</string>
    <string name="editor_insert_reminder_failed">Erro ao salvar o alarme</string>
    <string name="editor_update_reminder_successful">Alarme atualizado com sucesso</string>
    <string name="editor_update_reminder_failed">Erro ao atualizar o alarme</string>
    <string name="btn1_description">Start foreground service</string>
    <string name="btn1_title">Start</string>
    <string name="simple_service_title">Simple Service</string>
    <string name="simple_service_desc">Simple Service from the OTest app</string>
    <string name="main_create_noti2_btn">Send</string>
    <string name="btnA_title">Go to Settings</string>
    <string name="noti_channel_default">Primary Channel</string>
    <string name="noti1_title">Notification 1 Title</string>
    <string name="primary1_body">The content</string>
    <string name="noti2_title">Second notification</string>
    <string name="secondary1_body">Notification body text.</string>
    <string name="noti_channel_second">Secondary Channel</string>
    <string name="main_primary_title">Primary Channel</string>
    <string name="main_primary_send1">Send 1</string>
    <string name="main_primary_send2">Send 2</string>
    <string name="main_primary_config">Go to primary settings</string>
    <string name="main_secondary_title">Secondary Channel</string>
    <string name="main_secondary_send1">Send 1</string>
    <string name="main_secondary_send2">Send 2</string>
    <string name="main_secondary_config">Go to secondary settings</string>
    <string name="primary2_body">Second Notification for Primary Channel</string>
    <string name="secondary2_body">Second Notification for Secondary Channel</string>
    <string name="splash_descriptionImage_background">Background da tela</string>
    <string name="splash_descriptionImage_icone_ifsp">Icone do IFSP</string>
    <string name="splash_descriptionImage_icone_scopus">Icone da SCOPUS</string>
    <string name="splash_descriptionImage_icone_evo_systems">Icone da Evo Systems</string>
    <string name="splash_txt_rodape">www.ifsp.edu.br</string>
    <string name="main_alert_dialog_localizacao_txtTitulo">Para continuar, ative a localização do
        dispositivo, que usa o serviço de localização do Google</string>
    <string name="main_alert_dialog_localizacao_btnPositivo">Ok</string>
    <string name="main_alert_dialog_localizacao_btnNegativo">Cancelar</string>
    <string name="main_txt_titulo_historico">Histórico</string>
    <string name="alertaqueda_txt_informativo">Foi detectada uma queda durante o processo!</string>
    <string name="alertaqueda_txt_pergunta">Está tudo bem?</string>
    <string name="alertaqueda_btn_resposta_s">Estou bem</string>
    <string name="alertaqueda_btn_resposta_n">Não estou bem</string>
    <string name="alertaqueda_descriptionImage_icons">Icone de resposta</string>
    <string name="alertaqueda_descriptionImage_background">Background do botão</string>
    <string name="alertaqueda_descriptionBtns">(Mantenha pressionado)</string>
    <string name="cadastro_geral_txt_titulo">Ficha médica</string>
    <string name="cadastro_geral_btn_proximo">Próximo</string>
    <string name="cadastro_geral_txt_titulo_endereco">Endereço</string>
    <string name="cadastro_geral_txt_alert_campos">É necessário preencher todos os campos!</string>
    <string name="cadastro_geral_txt_hint_nome">Nome</string>
    <string name="cadastro_geral_txt_hint_sobrenome">Sobrenome</string>
    <string name="cadastro_geral_txt_hint_data_nascimento">Data de nascimento (dd/mm/aaaa)</string>
    <string name="cadastro_geral_txt_hint_grupo_sanguineo">Grupo sanguíneo</string>
    <string name="cadastro_geral_txt_hint_altura">Altura (Metros)</string>
    <string name="cadastro_geral_txt_hint_peso">Peso (Quilos)</string>
    <string name="cadastro_geral_txt_hint_titulo_endereco">Endereço</string>
    <string name="cadastro_geral_txt_hint_logradouro">Logradouro</string>
    <string name="cadastro_geral_txt_hint_numero">Número</string>
    <string name="cadastro_geral_txt_hint_cep">CEP</string>
    <string name="cadastro_geral_txt_hint_bairro">Bairro</string>
    <string name="cadastro_geral_txt_hint_cidade">Cidade</string>
    <string name="cadastro_geral_txt_hint_estado">Estado</string>
    <string name="cadastro_geral_txt_hint_complemento">Complemento</string>
    <string name="cadastro_alergia_txt_titulo">Alergias</string>
    <string name="cadastro_alergia_txt_informativo">Clique no item para excluí-lo!</string>
    <string name="cadastro_alergia_btn_proximo">Próximo</string>
    <string name="cadastro_alergia_descriptionImage_btn">Botão</string>
    <string name="cadastro_medicamento_txt_titulo">Medicamentos</string>
    <string name="cadastro_medicamento_txt_informativo">Clique no item para excluí-lo!</string>
    <string name="cadastro_medicamento_txt_hint_nome">Nome</string>
    <string name="cadastro_medicamento_txt_hint_quantidade">Quantidade</string>
    <string name="cadastro_medicamento_txt_hint_frequência">Frequência</string>
    <string name="cadastro_medicamento_btn_proximo">Próximo</string>
    <string name="cadastro_medicamento_descriptionImage_btn">Botão</string>
    <string name="cadastro_contato_emergencia_txt_titulo">Contatos de emergência</string>
    <string name="cadastro_contato_emergencia_btn_finalizar">Finalizar</string>
    <string name="cadastro_contato_emergencia_descriptionImage_btn">Botão</string>
    <string name="cadastro_contato_emergencia_txt_informativo">Clique no item para excluí-lo!</string>
    <string name="cadastro_contato_emergencia_txt_hint_nome">Nome</string>
    <string name="cadastro_contato_emergencia_txt_hint_numero">Número</string>
    <string name="cadastro_contato_emergencia_txt_hint_parentesco">Parentesco</string>
    <string name="cadastro_contato_emergencia_txt_alert_minimo">Precisa cadastrar ao menos um Contato de Emergência!</string>
    <string name="cadastro_contato_emergencia_txt_alert_campos">É necessário preencher todos os campos!</string>
    <string name="ficha_medica_descriptionImage_icon">Icone de alerta</string>
    <string name="ficha_medica_txt_titulo">Preciso de Ajuda</string>
    <string name="ficha_medica_txt_grupo_sanguineo">Grupo Sangúineo:</string>
    <string name="ficha_medica_txt_quilo">kg</string>
    <string name="ficha_medica_txt_centimetro">m</string>
    <string name="ficha_medica_txt_titulo_alergias">Alergías e Reações</string>
    <string name="ficha_medica_txt_titulo_medicamentos">Medicamentos</string>
    <string name="ficha_medica_txt_titulo_contatos">Contatos de emergência</string>
    <string name="listview_adapter_medicamento_txt_nome">Nome:</string>
    <string name="listview_adapter_medicamento_txt_quantidade">Quantidade:</string>
    <string name="listview_adapter_medicamento_txt_frequencia">Frequência:</string>
    <string name="listview_adapter_contato_emergencia_txt_nome">Nome:</string>
    <string name="listview_adapter_contato_emergencia_txt_numero">Número:</string>
    <string name="listview_adapter_contato_emergencia_txt_parentesco">Parentesco:</string>
    <string name="item_historico_descriptionImage_icon">Icone de status</string>
    <string name="API_KEY">AIzaSyDG5FJfNxvNO11ndq06IpaCG3Agk8TMR88</string>
</resources>