<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clickLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/background_item_remedio"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/RemedioThumbnail_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/thumbnail_image_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_toEndOf="@id/RemedioThumbnail_image"
        android:orientation="vertical"
        android:padding="4dp">

        <TextView
            android:id="@+id/nomeRemedio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/txtNomeRemedio"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="27sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/quantidadeTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/v_lblQuantidade"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/quantidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/txtQuantidade"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/quantidadeTitulo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/v_lblFrequencia"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/frequencia"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="0.9"
                android:text="@string/form_lblFreq"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/removeIten"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="0.1"
                android:contentDescription="@string/ic_delete_red"
                app:srcCompat="@drawable/ic_clear_red" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>

