<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    tools:context=".activities.CadastroMedicamentoActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/cadastro_medicamento_txt_titulo"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ltvAlergias" />

    <EditText
        android:id="@+id/edtNomeMedicamento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/cadastro_medicamento_txt_hint_nome"
        android:inputType="text"
        android:maxLength="150"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@id/btnAddMedicamento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitulo" />

    <EditText
        android:id="@+id/edtQtdeMedicamento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/cadastro_medicamento_txt_hint_quantidade"
        android:inputType="text"
        android:maxLength="150"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@id/btnAddMedicamento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtNomeMedicamento" />

    <EditText
        android:id="@+id/edtFrequenciaMedicamento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/cadastro_medicamento_txt_hint_frequência"
        android:inputType="text"
        android:maxLength="150"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@id/btnAddMedicamento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtQtdeMedicamento" />

    <ImageButton
        android:id="@+id/btnAddMedicamento"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:contentDescription="@string/cadastro_medicamento_descriptionImage_btn"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="@id/edtFrequenciaMedicamento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitulo" />

    <TextView
        android:id="@+id/txtInformativo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_medicamento_txt_informativo"
        android:textColor="@color/primaryHintTextColor"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/edtFrequenciaMedicamento" />

    <ListView
        android:id="@+id/ltvMedicamentos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/txtInformativo"
        tools:listitem="@layout/item_cadastro_remedio" />

    <Button
        android:id="@+id/btnProximo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/cadastro_medicamento_btn_proximo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ltvMedicamentos" />

</android.support.constraint.ConstraintLayout>